<resources>
    <string name="payment_gatwat_key">rzp_test_nCkKz04b6hZfc9</string>
    <string name="app_name">ClothingTemplate1</string>
    <string name="alert">Alert</string>
    <string name="content_description">Content Description</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="order_list">Your Orders</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="profile">Profile</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="view_all"><u>View All</u></string>
    <string name="size">Size: </string>
    <string name="note_for_address">Note: Check the current address or Add the new address</string>
    <string name="current_address">Current Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="next">Next</string>
    <string name="use_shipping_address_for_billing">Use shipping address for billing</string>
    <string name="forgot_username"><u>Forgot username?</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u><b>Sign up</b></u></string>
    <string name="already_have_an_account_sign_up">Already have an account? <u><b>Sign in</b></u></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="h_no_internet">No Internet</string>
    <string name="no_internet">No internet connection available, Please make sure your device is connected to the internet</string>
    <string name="h_login_401">Unauthorized Access</string>
    <string name="login_401">Unable to log in with provided credentials,Please check and retry</string>
    <string name="no_restro_access">You do not have access to restaurant.</string>
    <string name="h_login_403">Access Denied</string>
    <string name="ok">Ok</string>
    <string name="confirm_user">You do not have access to this restaurant. If you want to login for this restaurant please click on OK.</string>
    <string name="congratulations">Congratulations</string>
    <string name="password_reset_success">Password reset email has been sent on register email id</string>
    <string name="username_reset_success">Username reset email has been sent on register email id</string>
    <string name="enter_your_email">Enter your email id</string>
    <string name="enter_your_user_name">Enter your username</string>
    <string name="email">Email</string>
    <string name="user_name">Username <font fgcolor="#ff0000"> * </font></string>
    <string name="warning">Unauthorized Access</string>
    <string name="login_400">Your email id/username is already used in InstaApp application for one of the platform. You can login to Insta App or register with new email id/username</string>
    <string name="no_response">"The system is temporarily unavailable. Please try again later"</string>
    <string name="registration_success"><b>Registration has been done successfully.</b>\nWe sent you an email for account verification</string>
    <string name="enter_otp">Enter OTP here</string>
    <string name="warning2">Warning</string>
    <string name="dialog_delete_item_txt">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="delivery_services"><![CDATA[Delivery & Services]]></string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="cancel_coupon">Cancel coupon</string>
    <string name="Session_first_line">Session has been expired.</string>
    <string name="Session_second_line">Please login again</string>
    <string name="change_your_password"><u>Change Your Password</u></string>
    <string name="password_change_successfully">Your password has been successfully changed!</string>
    <string name="cancel_order_warning_msg">Are you sure you want to cancel this order?</string>
</resources>