<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="enableValue"
            type="Boolean" />


        <variable
            name="addressData"
            type="com.instaapp.clothingtemplate1.dataModel.CategoryResponse" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semi_background"
            android:orientation="vertical"
            tools:context=".ui.activity.CheckOutActivity">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <TextView
                android:id="@+id/txtNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:fontFamily="serif"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text="@string/note_for_address"
                android:textColor="@color/text"
                android:textSize="@dimen/normal_text"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/layoutCurrentShippingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_drawer"
                android:elevation="@dimen/_1sdp"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtExistingAddressHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:fontFamily="serif"
                    android:gravity="center_vertical"
                    android:text="@string/current_address"
                    android:textColor="@color/text"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtExistingAddressHeading"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxCurrentAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/prime_dark" />

                    <TextView
                        android:id="@+id/txtExistAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center_vertical"
                        android:textColor="@color/text"
                        android:textSize="@dimen/normal_text" /><!--app:shippingAddress="@{addressData.results[0]}" -->
                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddNewAddress"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="serif"
                android:text="@string/add_new_address"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_8sdp"
                android:fontFamily="serif"
                android:text="@string/next"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <include
            android:id="@+id/progressDialog"
            layout="@layout/progress_dialog" />
    </RelativeLayout>

</layout>