<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_background"
        android:orientation="vertical"
        android:paddingTop="@dimen/_30sdp"
        android:paddingHorizontal="@dimen/_20sdp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/text"
            android:contentDescription="@string/content_description"
            android:src="@drawable/back_drawer"
            app:tint="@color/text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="Sign in"
            android:textAlignment="center"
            android:textColor="@color/prime_dark"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_15sdp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="Welcome Back!"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="sign in to continue"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/_12sdp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="Username"
            app:endIconCheckable="false"
            app:endIconMode="custom"
            app:endIconTint="@color/black"
            app:hintTextAppearance="@style/TextInputLayoutHintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/forgot_username"
            android:textColor="@color/text"
            android:textSize="@dimen/_11sdp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="Password"
            app:endIconCheckable="false"
            app:endIconMode="custom"
            app:endIconTint="@color/black"
            app:hintTextAppearance="@style/TextInputLayoutHintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:textSize="@dimen/_11sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/rememberCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:buttonTint="@color/prime_dark"
                android:fontFamily="@font/nunito_regular"
                android:text="Remember me"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="@dimen/_5sdp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/forgot_password"
                android:textColor="@color/text"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_8sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/text"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignin"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/button_background"
            android:elevation="@dimen/_8sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

        <include
            android:id="@+id/progressDialog"
            layout="@layout/progress_dialog" />
    </RelativeLayout>
</layout>
